add extra info in readme
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>